@@ -266,6 +266,7 @@ struct bview {
     fastf_t                     gv_point_scale;
     fastf_t                     gv_curve_scale;
     fastf_t                     gv_data_vZ;
+    size_t                      gv_threshold;
 };
 
 
